--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,2 @@
-theme: jekyll-theme-minimal
 title: PowerSheet RSS Reader Upwork
-description: The Best RSS Reader for Upwork freelancers.
+description: The Best RSS Reader for Upwork Freelancers
