--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 title: PowerSheet RSS Reader Upwork
-description: The Best RSS Reader for Upwork Freelancers
+description: Best RSS Reader for Upwork Freelancers
