--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: PowerSheet RSS Reader Upwork
 description: Best RSS Reader for Upwork
-theme: jekyll-theme-minima
+theme: minima
 # remote_theme: THEME-NAME
