--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
 title: PowerSheet RSS Reader Upwork
 description: Best RSS Reader for Upwork
-theme: minima
+# theme: minima
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 # remote_theme: THEME-NAME
