--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,4 @@ description: Best RSS Reader for Upwork
 # plugins:
 # - jekyll-remote-theme # add this line to the plugins list if you already have one
 # remote_theme: THEME-NAME
+include: .well-known
