--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: PowerSheet RSS Reader Upwork
-description: Best RSS Reader for Upwork
+title: PowerSheet
+description: We develop tools, add-ons and templates for Google Sheets and other Google Workspace products
 # theme: minima
 # remote_theme: pages-themes/minimal@v0.2.0
 # plugins:
